review register and show list update done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ Spring.servlet.multipart.max-request-size=30MB
 Spring.servlet.multipart.max-file-size=10MB
 
 org.zerock.upload.path=C:\\workspace\\upload\\movie
+
+server.port=8090
